core: make setting the shutdown watchdog configuration via dbus work

https://bugs.freedesktop.org/show_bug.cgi?id=88284